--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "gray-matter": "^4.0.3",
     "next": "12.0.7",
@@ -15,6 +16,7 @@
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^7.0.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "17.0.2",
     "sass": "^1.45.0",
     "tailwindcss": "^3.0.1"
