--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p $PORT"
-
+    "start": "next start"
+  },
+    "engines": {
+    "node": "17.2.0", // your version here
+    "npm": "8.1.4"   // your version here
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
